sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:20: error: not found: value j
      j = n - i
      ^AlgCocktailSort1:21: error: not found: value j
      if (plusPetit(j,j+1)==false)
                    ^AlgCocktailSort1:21: error: not found: value j
      if (plusPetit(j,j+1)==false)
                      ^AlgCocktailSort1:23: error: not found: value j
        echange(j,j+1)
                ^AlgCocktailSort1:23: error: not found: value j
        echange(j,j+1)
                  ^